[gd_scene load_steps=17 format=2]

[ext_resource path="res://Field/reed_grass9.png" type="Texture" id=1]
[ext_resource path="res://Field/reed_grass_1.png" type="Texture" id=2]
[ext_resource path="res://Field/Field.gd" type="Script" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 7.0
height = 15.0

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 24, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 24, 0, 24, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 48, 0, 24, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 72, 0, 24, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 96, 0, 24, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 120, 0, 24, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 144, 0, 24, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 2 )
region = Rect2( 168, 0, 24, 32 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 2 )
region = Rect2( 192, 0, 24, 32 )

[sub_resource type="SpriteFrames" id=11]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ) ],
"loop": false,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="Shader" id=12]
code = "shader_type canvas_item;

uniform float offset = 0.5;

float random (vec2 uv) {
    return fract(sin(dot(uv.xy,
        vec2(12.9898,78.233))) * 43758.5453123);
}

void vertex() {
	// VERTEX.x += cos(TIME* random(VERTEX)) * offset * (VERTEX.y - 15.0) * 0.1;
	VERTEX.x += cos(TIME* offset) * (VERTEX.y - 15.0) * 0.1;
}"

[sub_resource type="ShaderMaterial" id=13]
resource_local_to_scene = true
shader = SubResource( 12 )
shader_param/offset = 0.5

[node name="Field" type="Area2D"]
scale = Vector2( 2, 2 )
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 1 )

[node name="Growing" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 0, -12 )
frames = SubResource( 11 )
frame = 8

[node name="Grown" type="Sprite" parent="."]
material = SubResource( 13 )
position = Vector2( 0, -12 )
texture = ExtResource( 1 )

[connection signal="body_entered" from="." to="." method="_on_Field_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Field_body_exited"]
[connection signal="animation_finished" from="Growing" to="." method="_on_Growing_animation_finished"]
